--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div>
             <a href="">The Story Of The Great Escape</a>
             <p> In March 1944, 76 officers broke out of a German prisoner-of-war camp. In 1977, a key member of the escape team talked to the BBC about the mission, and the Hollywood film it inspired.</p>
-           <button style="background-color: white; border: 1px solid black; width: 100px; height: 40px;">See More</button> 
+           <button id="see-more" style="background-color: white; border: 1px solid black; width: 100px; height: 40px;">See More</button> 
         </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
         <div>
             <a href="">Can AI help with your back pain?</a>
             <p>Back pain is one of the leading causes of disability in the world, but an AI-powered app is being used to help patients in the UK to manage their symptoms. But how does it measure up?</p>
-           <button style="background-color: white; border: 1px solid black; width: 100px; height: 40px;">See More</button> 
+           <button id="see-more" style="background-color: white; border: 1px solid black; width: 100px; height: 40px;">See More</button> 
         </div>
         <div id="history-img">
             <img src="https://ichef.bbci.co.uk/images/ic/1024x576/p0kzp576.png.webp" alt="">
@@ -162,7 +162,6 @@
             <p><strong>The surprising story of Van Gogh's guardian angel</strong></p>
         </div>
     </div>
-    <div id="news-container"></div>
     <script src="header-footer.js"></script>
     <script src="script.js"></script>
 </body>
