--- a/index.html
+++ b/index.html
@@ -4,165 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <link rel="stylesheet" href="mainPage.css">    
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik+Distressed&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="mainPage.css">    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik+Distressed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-
-    <div class="news-layout">
-       <div class="left-news">
-          <div class="left-img">
-               <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/4789/live/c7fcbb30-0427-11f0-97d3-37df2b293ed1.jpg.webp" alt="">
-          </div>
-          <h3>Who's who in Canada's federal election</h3>
-          <p>Canadians will vote on April 28. Here is a breakdown of who could be their next prime minister.</p>
-          <hr>
-          <div class="left-img">
-            <img src="https://ichef.bbci.co.uk/ace/standard/480/cpsprodpb/95a1/live/41a92e60-0814-11f0-94d4-6f954f5dcfa3.jpg.webp" alt="">
-       </div>
-       <h3>Huge protests across Turkey after president's main rival jailed</h3>
-       <p>Thousands of people have been protesting since Istanbul's mayor was detained on Wednesday..</p>
-       </div>
-       <div class="middle-news">
-        <div id="middle-img">
-            <img src="https://ichef.bbci.co.uk/ace/standard/1024/cpsprodpb/5bf7/live/7ff4c7e0-0811-11f0-94d4-6f954f5dcfa3.jpg" alt="">
-        </div>
-     
-        <h2>Trump looms over Canada's election as campaigns begin</h2>
-        <p>PM Mark Carney says Trump "wants to own us" and opposition leader Pierre Poilievre says he will be "firm" with the US president.</p>
-     </div>
-       <div class="right-news">
-        <div class="news-item">
-            <h3>US hopes for 'real progress' in peace talks, as three killed in Russian strikes on Ukraine</h3>
-            <p>US envoy Steve Witkoff says talks with Ukraine and Russia will aim to "narrow the issues, bring the parties together, and stop the killing".</p>
-        </div>
-        <div class="news-item">
-            <h3>Pope Francis is discharged from Rome hospital</h3>
-            <p>The Pope waved from the hospital window before being discharged to return to the Vatican.</p>
-        </div>
-        <div class="news-item">
-            <h3>More than 50,000 killed in Gaza since Israel offensive began, Hamas-run ministry says.</h3>
-            <p>  More than 50,000 Palestinians have been killed during Israel's military campaign in Gaza, the Hamas-run health ministry says</p>
-        </div>
-        <div class="news-item">
-            <h3>Ferrari's Hamilton disqualified from Chinese GP</h3>
-            <p>Lewis Hamilton is disqualified from the Chinese Grand Prix for a technical infringement on his Ferrari.</p>
-        </div>
-       </div>
-    </div>
-    <hr style="border: 2px solid;">
-    <h3>ONLY FROM WBC</h3>
-    <div class="articles">
-       <div id="left-article">
-        <img src="https://ichef.bbci.co.uk/images/ic/1024x576/p0kzn4jp.jpg.webp" alt="">
-        <a href="article.html">How often should you wash your feet?</a>
-        <p>Some people scrub them every day while others say letting water run over them in the shower is enough. So are you cleaning these important appendages enough?</p>
-       </div>
-    <div id="left-article">
-         <img src="https://ichef.bbci.co.uk/images/ic/1024x576/p0kzc0wh.jpg.webp" alt="">
-       <h3>The true story of The Great Escape</h3>
-     <p>In March 1944, 76 officers broke out of a German prisoner-of-war camp. In 1977, a key member of the escape team talked to the BBC about the mission, and the Hollywood film it inspired.</p>
-    </div>   
-    </div>
-    <div>
-        <hr style="border: 2px solid;">
-        <h3>MORE NEWS</h3>
-        <div class="more-news">
-            <div><a href="">Two women who spied for Russia tracked down and named by BBC</a>
-            <p>36 mins ago | Europe</p>
-            </div>
-            <div><a href="">The Indian scholar arrested in US over father-in-law's Hamas link</a>
-            <p>12 hrs ago | World</p></div>
-            <div><a href="">NewJeans announce hiatus after setback in court battle</a>
-            <p>13 hrs ago | Asia</p></div>
-            <div><a href="">Five things to look for in Canada's election</a>
-            <p>17 hrs ago | US & Canada</p></div>
-            <div><a href="">South Korea court reinstates PM as acting leader</a>
-                <p>15 hrs ago | Asia</p>
-            </div>
-         </div>
-    </div>
-      <div>
-        <hr style="border: 2px solid black;">
-        <h3>IN HISTORY</h3>
-        <div class="inHistory">
-        <div id="history-img">
-          <img src="https://ichef.bbci.co.uk/images/ic/1920x1080/p0kzc0wh.jpg.webp" alt="">
-        </div>
-        <div>
-            <a href="">The Story Of The Great Escape</a>
-            <p> In March 1944, 76 officers broke out of a German prisoner-of-war camp. In 1977, a key member of the escape team talked to the BBC about the mission, and the Hollywood film it inspired.</p>
-           <button id="see-more" style="background-color: white; border: 1px solid black; width: 100px; height: 40px;">See More</button> 
-        </div>
-        </div>
-      </div>
-      <div>
-        <hr style="border: 2px solid black;">
-        <h3>AI V THE MIND</h3>
-        <div class="inHistory">
-        <div>
-            <a href="">Can AI help with your back pain?</a>
-            <p>Back pain is one of the leading causes of disability in the world, but an AI-powered app is being used to help patients in the UK to manage their symptoms. But how does it measure up?</p>
-           <button id="see-more" style="background-color: white; border: 1px solid black; width: 100px; height: 40px;">See More</button> 
-        </div>
-        <div id="history-img">
-            <img src="https://ichef.bbci.co.uk/images/ic/1024x576/p0kzp576.png.webp" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="section tech">
-            <h3>TECH</h3>
-            <p><strong>The surprising persistence of typewriters</strong></p>
-            <small>2 days ago | Future</small>
-            <p><strong>Facebook to stop targeting ads at UK woman after legal fight</strong></p>
-            <small>2 days ago | Technology</small>
-            <p><strong>The man with a mind-reading chip in his brain - thanks to Elon Musk</strong></p>
-            <small>2 days ago | Technology</small>
-            <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/fa32/live/e4e76100-058a-11f0-97d3-37df2b293ed1.jpg.webp" alt="Netflix Show">
-            <p><strong>Netflix's answer to The Traitors, and a rival to The Sims</strong></p>
-        </div>
-
-        <div class="section science">
-            <h3>SCIENCE & HEALTH</h3>
-            <p><strong>End of hedonism? Why Britain turned its back on clubbing</strong></p>
-            <small>1 day ago | BBC InDepth</small>
-            <p><strong>I'm living with the worst type of brain tumour</strong></p>
-            <small>14 hrs ago | Oxfordshire</small>
-            <p><strong>Pioneering trial could 'switch off' arthritis</strong></p>
-            <small>13 hrs ago | Tyne</small>
-            <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/1626/live/ea967420-067e-11f0-94d4-6f954f5dcfa3.jpg.webp" alt="Skin Lightening Story">
-            <p><strong>'I scarred my six children by using skin-lightening creams'</strong></p>
-        </div>
-
-        <div class="section culture">
-            <h3>CULTURE</h3>
-            <p><strong>UK TV industry in crisis, says Wolf Hall director</strong></p>
-            <small>2 days ago | Culture</small>
-            <p><strong>My baby's premature birth was humbling, says Beatrice</strong></p>
-            <small>1 day ago | Health</small>
-            <p><strong>Former BBC Radio 1 DJ Andy Peebles dies at 76</strong></p>
-            <small>1 day ago | Culture</small>
-            <img src="https://ichef.bbci.co.uk/news/480/cpsprodpb/e0d8/live/1b24a0e0-0895-11f0-97d3-37df2b293ed1.jpg.webp" alt="Mary Berry">
-            <p><strong>Mary Berry moved to tears by royal birthday message</strong></p>
-        </div>
-
-        <div class="section arts">
-            <h3>ARTS</h3>
-            <p><strong>Is this the face of teenage queen Lady Jane Grey?</strong></p>
-            <small>7 Mar 2025 | Culture</small>
-            <p><strong>Five ways to spot a fake masterpiece</strong></p>
-            <small>12 Mar 2025 | Culture</small>
-            <p><strong>University scholar solves portrait theft mystery</strong></p>
-            <small>6 days ago | Culture</small>
-            <img src="https://ichef.bbci.co.uk/images/ic/480x270/p0kypczs.jpg.webp" alt="Van Gogh">
-            <p><strong>The surprising story of Van Gogh's guardian angel</strong></p>
-        </div>
+    <div class="news-3col-layout">
+        <div class="left-news" id="left-news"></div>
+        <div class="middle-news" id="middle-news"></div>
+        <div class="right-news" id="right-news"></div>
     </div>
     <script src="header-footer.js"></script>
     <script src="script.js"></script>
+    <script src="mainNews.js"></script>
 </body>
 </html>
